# budget-analyser

./: .gitignore  Cargo.toml  Makefile  POC.md  PROJECT-description.md  README.md  analysis.ipynb  cowork-instructions.md  eslint.config.js  package-lock.json  package.json
.claude/: settings.json
cowork/: monthly-income.html  savings-analysis.html
data/: ground-truth.toml  synthetic-ubstransactions-feb2026.csv
data/test/: account-statement.csv  credit-card-invoice.csv
openspec/changes/add-chat-context/: proposal.md
openspec/changes/cli-review/: design.md  proposal.md
openspec/changes/dynamic-categories/: proposal.md
openspec/changes/implement-poc/: design.md  proposal.md
openspec/changes/rules-based-cc-import/: design.md  proposal.md  tasks.md
openspec/specs/batch-import/: spec.md
openspec/specs/category-schema/: spec.md
openspec/specs/chat-context/: spec.md
openspec/specs/cli-review/: spec.md
openspec/specs/csv-parsing/: spec.md
openspec/specs/dynamic-categories/: spec.md
openspec/specs/dynamic-few-shot/: spec.md
openspec/specs/llm-classification/: spec.md
openspec/specs/merchant-cache/: spec.md
openspec/specs/poc-evaluation/: spec.md
scripts/: backup-to-nas.sh
src/: cache.rs  categories.rs  cc_rules.rs  classifier.rs  config.rs  csv_parser.rs  db.rs  evaluator.rs  main.rs  review.rs
src/ai/: agent.rs  llm.rs  mod.rs
src/chat/: handler.rs  mod.rs  sessions.rs
src/db/: import.rs  mod.rs
src/tools/: mod.rs
static/: app.js  chat.js  index.html  styles.css
tests/fixtures/: account_statement_tiny.csv  credit_card_tiny.csv
(+64 files in other folders)
