[package]
name = "budget-analyser"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
dotenvy = "0.15"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
async-stream = "0.3"
axum = "0.7"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
